# vehicle_routing_problem

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: cplex.cmake  tbb.cmake
lib/: CMakeLists.txt
lib/include/: compute.h  constraints.h  csv_parser.h  customer.h  improvement_heuristics.h  initial_heuristics.h  logging.h  objective.h  optimal_solution.h  problem.h  route_point.h  seq_insertion.h  solution.h  threading.h  threading.hpp  transportation_quantity.h  transportation_unit.h  vehicle.h  xml_parser.h
lib/src/: compute.cpp  constraints.cpp  csv_parser.cpp  improvement_heuristics.cpp  initial_heuristic.cpp  initial_heuristics.cpp  objective.cpp  optimal_solution.cpp  problem.cpp  route_point.cpp  solution.cpp
lib/src/internal/: cfrs_cplex_inl.h  cfrs_cplex_inl.hpp  cluster_first_route_second.cpp  cluster_first_route_second.h  mole_jameson.cpp  mole_jameson.h  parallel_insertion.cpp  parallel_insertion.h  savings.cpp  savings.h  seq_insertion.cpp  stub_cfrs_cplex_inl.h  stub_cfrs_cplex_inl.hpp  subparsers.cpp  subparsers.h  table_parsers.cpp  table_parsers.h  tabu_search.cpp  tabu_search.h  utils.h
lib/src/internal/tabu/: local_search.cpp  local_search.h  tabu_lists.h
results/: solomon.txt
script/: acc.py  compare.py  compare_acc_tries.py  folder2csv.py  folder2csv_2.py  parse_run_data.py  run.py  solomon2csv.py  solomon2sdvrptwsd.py  stats.py
script/internal/: fix_vehicle_ids.py
test_data/: sample_input.csv
test_data/real_life/: real_life_big_instance.csv  real_life_small_instance.csv
test_data/solomon/: c101.csv  c102.csv  c103.csv  c104.csv  c105.csv  c106.csv  c107.csv  c108.csv  c109.csv  c201.csv  c202.csv  c203.csv  c204.csv  c205.csv  c206.csv  c207.csv  c208.csv  r101.csv  r102.csv  r103.csv  r104.csv  r105.csv  r106.csv  r107.csv  r108.csv  r109.csv  r110.csv  r111.csv  r112.csv  r201.csv  r202.csv  r203.csv  r204.csv  r205.csv  r206.csv  r207.csv  r208.csv  r209.csv  r210.csv  r211.csv  (+16 more)
test_data/solomon_sdvrptwsd/: mc101.csv  mc102.csv  mc103.csv  mc104.csv  mc105.csv  mc106.csv  mc107.csv  mc108.csv  mc109.csv  mc201.csv  mc202.csv  mc203.csv  mc204.csv  mc205.csv  mc206.csv  mc207.csv  mc208.csv
tools/: CMakeLists.txt  solution_drawer.cpp
tools/solution_drawer/: solution_drawer.h
